# data_base_homeworks

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py
src/api/: hh_api.py
src/database/: db_creator.py  db_manager.py
src/models/: employer.py  vacancy.py
