[project]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = [
    {name = "Max",email = "z.max83@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 119
exclude = '.git'

[tool.mypy]
line-length = 119
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv', 'tests']

[tool.isort]
line_length = 119
