[project]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = [
    {name = "Max",email = "z.max83@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
types-requests = "^2.32.4.20250611"
types-psycopg2 = "^2.9.21.20250516"

[tool.black]
line-length = 119
exclude = '.git'

[tool.mypy]
line-length = 119
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv', 'tests']

[tool.isort]
line_length = 119
